// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Job Application List correctly with inputs 1`] = `
<div
  className="content-container__dashboard"
>
  <p
    className="numeral_locale"
  >
    en-gb
  </p>
  <h2
    className="total__filter__selected"
  >
    There are a total of 
    4
     Job Applications listed for the filters selected
  </h2>
  <div
    className="list-body"
  >
    <div
      className="list-header"
    >
      <div
        className="upper_message_company"
      >
        Company & Role
      </div>
      <div
        className="upper_message_salary"
      >
        Salary
      </div>
    </div>
    <div
      key="1"
    >
      <Link
        className="list-item"
        replace={false}
        to="/view/1"
      >
        <div>
          <p
            className="list-item__title"
          >
            COMPANY ONE
          </p>
          <span
            className="list-item__sub-title"
          >
             
            JOB ONE
             
          </span>
        </div>
        <span
          className="list-item__data"
        >
          £10.00
           
        </span>
      </Link>
    </div>
    <div
      key="2"
    >
      <Link
        className="list-item"
        replace={false}
        to="/view/2"
      >
        <div>
          <p
            className="list-item__title"
          >
            COMPANY TWO
          </p>
          <span
            className="list-item__sub-title"
          >
             
            JOB TWO
             
          </span>
        </div>
        <span
          className="list-item__data"
        >
          £20.00
           
        </span>
      </Link>
    </div>
    <div
      key="3"
    >
      <Link
        className="list-item"
        replace={false}
        to="/view/3"
      >
        <div>
          <p
            className="list-item__title"
          >
            COMPANY THREE
          </p>
          <span
            className="list-item__sub-title"
          >
             
            JOB THREE
             
          </span>
        </div>
        <span
          className="list-item__data"
        >
          £05.00
           
        </span>
      </Link>
    </div>
    <div
      key="4"
    >
      <Link
        className="list-item"
        replace={false}
        to="/view/4"
      >
        <div>
          <p
            className="list-item__title"
          >
            COMPANY FOUR
          </p>
          <span
            className="list-item__sub-title"
          >
             
            JOB FOUR
             
          </span>
        </div>
        <span
          className="list-item__data"
        >
          £02.00
           
        </span>
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render Job Application List correctly with no inputs 1`] = `
<div
  className="content-container__dashboard"
>
  <p
    className="numeral_locale"
  >
    en-gb
  </p>
  <h2
    className="total__filter__selected"
  >
    There are a total of 
    0
     Job Applications listed for the filters selected
  </h2>
  <div
    className="list-body"
  >
    <div
      className="list-header"
    >
      <div
        className="upper_message_company"
      >
        Company & Role
      </div>
      <div
        className="upper_message_salary"
      >
        Salary
      </div>
    </div>
  </div>
</div>
`;
